--- a/public/services/src/app/views/detail/detailWorks/ask-detail.less
+++ b/public/services/src/app/views/detail/detailWorks/ask-detail.less
@@ -99,10 +99,16 @@
 		color: #84848E;
 		line-height: 1rem;
 		.userName {
-			display: block;
+			float: left;
 			margin-bottom: 0.3rem;
 			font-size: 0.93rem;
-		}		
+		}	
+		.dashang {
+			float: left;
+			margin-left: 0.3rem;
+			font-size: 0.93rem;
+			color: #F9D161;
+		}	
 		.userNameGroup {
 			display: block;
 			margin-bottom: 0.5rem;
@@ -113,6 +119,7 @@
 			}
 		}
 		.commentText {
+			clear: both;
 			display: block;
 			font-size: 0.93rem;
 			line-height: 1.43rem;
