--- a/public/services/src/app/views/menu/menu.html
+++ b/public/services/src/app/views/menu/menu.html
@@ -26,6 +26,6 @@
 		</div>
 	</li>
 </ul>
-<a href="http://a.app.qq.com/o/simple.jsp?pkgname=com.psgod&g_f=991653#opened" class="we-see">
+<!-- <a href="http://a.app.qq.com/o/simple.jsp?pkgname=com.psgod&g_f=991653#opened" class="we-see">
 	<img src="/images/wesee.png" alt="">
-</a>
+</a> -->
