--- a/public/services/src/app/views/personal/personalHeader/personal-header.less
+++ b/public/services/src/app/views/personal/personalHeader/personal-header.less
@@ -14,8 +14,8 @@
     border-top: 1px solid #eaeaea;
     .portrait{
         float: left;
-        width: 20%;
-        height: 20%;
+        width: 5.36rem;
+        height: 5.36rem;
         border-radius: 100%;
         overflow: hidden;
         margin-right: 3%;
@@ -27,7 +27,7 @@
     }
     .user-ifo {
         float: left;
-        width: 77%;
+        width: 74%;
         margin-bottom: 2.32rem;
         .nickname{
             display: block;
@@ -79,6 +79,26 @@
         background-color: #fff;
         color: #B9B8BD;
         border: 1px solid #B9B8BD;
+    }
+    .people-money {
+        display: block;
+        position: absolute;
+        right: 1rem;
+        height: 1.29rem;
+        .money-icon {
+            float: left;
+            width: 1.29rem;
+            height: 1.29rem;
+            margin-right: 0.5rem;
+            background: url(/images/money.png) 0 0 no-repeat;
+            background-size: contain;
+        }
+        .money-num {
+            float: left;
+            line-height: 1.29rem;
+            font-size: 0.86rem;
+            color: #313040;
+        }
     }
 }
 .header-nav{
