--- a/public/services/src/app/views/detail/detailContent/detail-content.less
+++ b/public/services/src/app/views/detail/detailContent/detail-content.less
@@ -153,7 +153,7 @@
 			max-width: 20rem;;
 			overflow: hidden;
 			margin-left: 0.36rem;
-			em {
+			.dashang {
 				display: block;
 				font-size: 1rem;
 				line-height: 1.43rem;
@@ -223,6 +223,19 @@
 				font-size: 0.86rem;
 				line-height: 1.51rem;
 				color: #000;
+			}			
+			.reward {
+				float: right;
+				width: 18%;
+				height: 1.93rem;
+				margin-top: -0.25rem;
+				margin-left: 1.5rem;
+				font-size: 1rem;
+				line-height: 1.93rem;
+				color: #fff;
+				text-align: center;
+				background-color: #F9D161;
+				border-radius: 1.79rem;
 			}
 			.communicate{
 				float: left;
@@ -270,6 +283,144 @@
 					}
 				}
 			}
+		}
+	}
+}
+.reward-toast {
+	position: fixed;
+	z-index: 9999;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0,0,0,0.7);
+	.reward-content {
+		overflow: hidden;
+		width: 85%;
+		margin: 6rem auto 0;
+		background-color: #fff;
+		border-radius: 0.71rem;
+		.reward-pic {
+			position: relative;
+			width: 100%;
+			height: 11.79rem;
+			overflow: hidden;
+			.origin-pic {
+				display: block;
+				position: absolute;
+				width: 100%;
+			}
+			.message-pic {
+				position: absolute;
+				display: block;
+				top: 6.93rem;
+				left: 0.5rem;
+				width: 96%;
+				height: 1.71rem;
+			}
+		}
+		.reward-people {
+			position: relative;
+			z-index: 2;
+			width: 2.5rem;
+			height: 2.5rem;	
+			margin: -1.07rem auto 0.5rem;
+			border: 0.36rem solid #fff;
+			border-radius: 50%;
+			overflow: hidden;
+			img {
+				display: block;
+				width: 100%;
+			}
+		}
+		.reward-input {
+			width: 78%;
+			margin: 0 auto 1.79rem;
+			border: 1px solid #B9B8BD;
+			border-radius: 3.57rem;
+			overflow: hidden;
+			height: 2.86rem;
+			line-height: 2.86rem;
+			text-align: center;
+			.explain {
+				float: left;
+				width: 32%;
+				color: #313040;
+				font-size: 0.93rem;
+				background-color: #B9B8BD;
+			}
+			.reward-money {
+				float: left;
+				width: 60%;
+				height: 2.86rem;
+				padding-left: 8%;
+				font-size: 1.07rem;
+				
+			}
+			input:-moz-placeholder {color: #B9B8BD;}input:-ms-input-placeholder {color: #B9B8BD;}input::-webkit-input-placeholder {color: #B9B8BD;}
+		}
+		.reward-buttom {
+			display: block;
+			width: 78%;
+			margin: 0 auto 3rem;
+			background-color: #F9D161;
+			line-height: 2.86rem;
+			text-align: center;
+			border-radius: 3.57rem;
+			font-size: 1.29rem;
+			color: #f5e7c4;
+		}
+		.reward-list {
+			padding: 0 1.07rem;
+			margin-bottom: 1.39rem;
+			.reward-avatar {
+				float: left;
+				width: 1.43rem;
+				height: 1.43rem;
+				border-radius: 50%;
+				overflow: hidden;
+				margin-right: 0.5rem;
+				img {
+					display: block;
+					width: 100%;
+				}
+			}
+			.reward-num {
+				float: left;
+				line-height: 1.43rem;
+				font-size: 0.86rem;
+				color: #B9B8BD;
+				em {
+					color: #F9D161;
+				}
+			}
+		}
+		.frist-people {
+			margin-bottom: 1.39rem;
+			line-height: 1.43rem;
+			font-size: 0.93rem;
+			color: #B9B8BD;
+			text-align: center;
+		}
+		.reward-message {
+			height: 3.5rem;
+			background-color: #F2F2F2;
+			line-height: 3.5rem;
+			.message-explain {
+				float: left;
+				width: 18%;
+				font-size: 0.93rem;
+				color: #313040;
+				text-align: center;
+			}
+			.message {
+				float: left;
+				width: 82%;
+				height: 3.5rem;
+				background-color: #F2F2F2;
+				color: #B9B8BD;
+			}
+			input:-moz-placeholder {color: #B9B8BD;}input:-ms-input-placeholder {color: #B9B8BD;}input::-webkit-input-placeholder {color: #B9B8BD;}
 		}
 	}
 }
