--- a/public/services/src/app/views/detail/detailContent/detail-content.less
+++ b/public/services/src/app/views/detail/detailContent/detail-content.less
@@ -295,9 +295,11 @@
 	height: 100%;
 	background-color: rgba(0,0,0,0.7);
 	.reward-content {
+		position: absolute;
+		top: 6rem;
+		left: 7.5%;
 		overflow: hidden;
 		width: 85%;
-		margin: 6rem auto 0;
 		background-color: #fff;
 		border-radius: 0.71rem;
 		.reward-pic {
