--- a/public/services/src/app/views/wallet/money/money.html
+++ b/public/services/src/app/views/wallet/money/money.html
@@ -10,7 +10,7 @@
 	</div>
 	<a href="#wallet/withdrawals" class="balance-button">提&nbsp&nbsp现</a>
 	<div class="careful">
-		<a href="" class="problem">常见问题</a>
+		<a href="#wallet/problem" class="problem">常见问题</a>
 		<a href="#wallet/detail" class="detailed">交易明细</a>
 	</div>
 </div>
